# Geolocalizador

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: allowed_emails.py  auth_proxy.py  deps.py  exports.py  keyword_profiles.py  photos.py  places.py  searches.py  territories.py  usage.py
backend/app/auth/: dependencies.py
backend/app/core/: exceptions.py  rate_limiter.py
backend/app/db/migrations/: 001_initial.sql  002_add_search_user_id.sql  002_api_usage.sql  003_pinned_searches.sql
backend/app/db/repositories/: allowed_emails.py  keyword_profiles.py  places.py  searches.py
backend/app/models/: keyword_profile.py  place.py  search.py  territory.py
backend/app/services/: email_scraper.py  export.py  geocoding_client.py  grid.py  nominatim_client.py  places_client.py  progress_tracker.py  search_engine.py  search_orchestrator.py  territory.py  usage_tracker.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: allowed-emails.ts  client.ts  exports.ts  keyword-profiles.ts  searches.ts  territories.ts  usage.ts
frontend/src/components/auth/: LoginPage.tsx
frontend/src/components/control/: ControlPanel.tsx
frontend/src/components/map/: HexGrid.tsx  (+5 more)
frontend/src/hooks/: useSearchSSE.ts
frontend/src/lib/: auth.ts
frontend/src/stores/: authStore.ts  drawingStore.ts  searchStore.ts  territoryStore.ts  uiStore.ts
frontend/src/types/: index.ts
(+14 files in other folders)
