[project]
name = "prospectoai-backend"
version = "0.1.0"
description = "ProspectoAI v2 — Geospatial business prospecting API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "h3>=4.1.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.6.0",
    "sse-starlette>=2.1.0",
    "shapely>=2.0.0",
    "openpyxl>=3.1.0",
    "orjson>=3.10.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
